(r5392) Fixed: compile problems with VisualStudio Express 2015.
(r5391) Fixed: recent system DCMTK versions on Fedora (perhaps elsewhere too)
        have lost constants for ACR-NEMA legacy field tags. Re-added those 
        for compatibility.


Release CMTK-3.2.3 (2015-02-01):

(r5381) Fixed: link error on Win64 due to missing implementation of a
        conversion method for 64bit integers.
(r5380) Fixed: MXML 2.8 is broken; when this version is detected, fall back to
        bundled library version.
(r5378) Fixed: bashisms fixed by merging downstream Debian patch; see
        https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=772217. Patch
        provided by Michael Gilbert <mgilbert@debian.org>.
(r5377) Fixed: on Windows, recursive directory creation failed if the given
        path begin with a drive letter. Thanks to Florian Schulze,
        fschulze@vrvis.at, for finding and fixing the problem.
(r5375) Fixed: when DICOM files have fractional rescale slope, read image as
        floating point, not integer.
(r5375) Fixed: "dcm2image" tool did not respect command line options to ignore
        acquisition number tags and disable orientation checks.
(r5374) Fixed: bashisms in two scripts.


Release CMTK-3.2.2 (2014-08-01):

(r5368) Fixed: XformList::ApplyInPlace terminated concatenation when an
	inverted B-spline FFD transformation was encountered.
(r5365) Fixed: binary VTK files were previously written (illegally) as
	double-precision data.
(r5353) Fixed: wrong binary paths in munger.pl script


Release CMTK-3.2.1 (2014-06-19):

(r5355) Added: ADNI phantom detection and quantification (exposed via the
	"detect_adni_phantom" tool) now computes maximum dimming, i.e.,
	minimum intensity of a 10mm sphere relative to the 90th percentile
	of intensities over all such spheres.
(r5353) Added: global scale factor support in "vol2csv" tool
(r5347) Fixed: missing coordinate information in Siemens mosaic files must
	be treated as zero.


Release CMTK-3.2.0 (2014-05-01):
