@@ -194,6 +194,14 @@ doMain( int argc, const char* argv[] )
     throw cmtk::ExitException( 1 );
     }
 
+  // Make sure we don't exceed maximum number of supported images. This is due to
+  // using, for example, "byte" for pixelwise image counts in averaging.
+  if ( fileNameList.size() > 255 ) 
+    {
+    cmtk::StdErr << "ERROR: no more than 255 images are supported.\n";
+    throw cmtk::ExitException( 1 );
+    }
+
   if ( NumberDOFs.empty() )
     NumberDOFs.push_back( 6 );
 
